--- a/zjl-index.html
+++ b/zjl-index.html
@@ -38,8 +38,11 @@
         <div class="zjl-slide">
             <ul>
                 <li><a href="#"></li>
+
                 <li><a href="#"></li>
+
                 <li><a href="#"></li>
+
             </ul>
         </div>
         <!-- 轮播器结束 -->
@@ -103,7 +106,7 @@
         </section>
         <!-- 导航栏结束 -->
         <!-- 主体功能部分开始 -->
-            <!-- 第一个导航栏开始 -->
+            <!-- 产品部分开始 -->
         <section class="zjl-module zjl-product">
             <h2>产品与服务</h2>
             <div class="zjl-group">
@@ -180,22 +183,189 @@
                     </div>
                 </article>
             </div>
-
-            <div></div>
+            <div class="more">
+                <a href="#">查看更多产品</a>
+            </div>
         </section>
-            <!-- 第一个导航栏结束 -->
-            <!-- 第二个导航栏开始 -->
-        <section class="zjl-module">
+            <!-- 产品部分结束 -->
+            <!-- 结局方案部分开始 -->
+        <section class="zjl-module zjl-solution">
+            <h2>解决方案</h2>
+            <div class="zjl-group">
+                <a href="#" target="_blank">
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <h3>网站及部署</h3>
+                                <p>做最懂站长的网站云服务，享专属SEO特权，让您的站点轻松取胜。</p>
+                            </figcaption>
+                            <img src="https://bce.bdstatic.com/portal/img/ffffff-0_d8974688.gif" alt="" class="icon"/>
+                        </figure>
+                    </article>
+                </a>
+                <a href="#" target="_blank">
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <h3>视频云</h3>
+                                <p>视频直播、点播一站式解决方案，让视频技术零门槛。</p>
+                            </figcaption>
+                            <img src="https://bce.bdstatic.com/portal/img/ffffff-0_d8974688.gif" alt="" class="icon"/>
+                        </figure>
+                    </article>
+                </a>
+                <a href="#" target="_blank">
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <h3>数字营销云</h3>
+                                <p>帮助客户提升营销效率，实现用户数与收入的双重增长。</p>
+                            </figcaption>
+                            <img src="https://bce.bdstatic.com/portal/img/ffffff-0_d8974688.gif" alt="" class="icon"/>
+                        </figure>
+                    </article>
+                </a>
+                <a href="#" target="_blank">
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <h3>大数据分析</h3>
+                                <p>提供数据分析和数据挖掘等高品质的技术，快速发现大数据的价值。</p>
+                            </figcaption>
+                            <img src="https://bce.bdstatic.com/portal/img/ffffff-0_d8974688.gif" alt="" class="icon"/>
+                        </figure>
+                    </article>
+                </a>
+                <a href="#" target="_blank">
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <h3>物联网</h3>
+                                <p>助力企业快速连接海量用户与设备，轻松构建各类物联网应用。</p>
+                            </figcaption>
+                            <img src="https://bce.bdstatic.com/portal/img/ffffff-0_d8974688.gif" alt="" class="icon"/>
+                        </figure>
+                    </article>
+                </a>
+                <a href="#" target="_blank">
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <h3>教育行业</h3>
+                                <p>构建百度独有的“教育云技术+教育大数据”解决方案。</p>
+                            </figcaption>
+                            <img src="https://bce.bdstatic.com/portal/img/ffffff-0_d8974688.gif" alt="" class="icon"/>
+                        </figure>
+                    </article>
+                </a>
+            </div>
+            <div class="more">
+                <a href="#">查看更多产品</a>
+            </div>
 
         </section>
-            <!-- 第二个导航栏结束 -->
+            <!-- 结局方案部分结束 -->
+            <!-- 云市场部分开始  -->
+        <section class="zjl-module zjl-market">
+            <a href="#" target="_blank">
+                <h2>云市场</h2>
+            </a>
+            <div class="group clearfix">
+                <a href="#">
+                    <article>
+                        <figure>
+                            <img src="img/mirror_1.png"  class="mir-img"/>
+                            <figcaption>
+                                <h3>镜像环境</h3>
+                                <p>基础系统到软件应用，应有尽有，一键装机</p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                </a>
+                <a href="#">
+                    <article>
+                        <figure>
+                            <img src="img/station_2.png" class="sta-img">
+                            <figcaption>
+                                <h3>建站推广</h3>
+                                <p>多终端、多行业、多形式的建站与推广服务</p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                </a>
+                <a href="#">
+                    <article>
+                        <figure>
+                            <img src="img/safety_3.png" class="safe-img">
+                            <figcaption>
+                                <h3>安全服务</h3>
+                                <p>多维度安全服务，构建安心可靠的云上体验</p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                </a>
+                <a href="#">
+                    <article>
+                        <figure>
+                            <img src="img/cloud_4.png" class="cloud-img">
+                            <figcaption>
+                                <h3>上云服务</h3>
+                                <p>迁移、运维、部署不用愁，零基础轻松上云</p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                </a>
+            </div>
+        </section>
+            <!-- 云市场部分结束  -->
+            <!-- 广告1部分开始  -->
+        <section class="zjl-event1">
+            <a href="#" target="_blank">
+                <div class="group">
+                    <h2>云虚拟主机BCH</h2>
+                    <br /> 
+                    <p>初创企业首选，低至6折</p>
+                    <img src="https://bce.bdstatic.com/portal/img/ffffff-0_d8974688.gif" alt="" class="icon icon-event1"/>
+                </div>
+            </a>
+        </section>
+            <!-- 广告1部份结束 -->
+            <!-- 新闻公告部分开始 -->
+        <section class="zjl-module zjl-news">
+            <h2>新闻公告</h2>
+            <div class="group">
+                <ul></ul>
+            </div>
+            <div class="more">
+                <a href="lu.html">查看更多</a>
+            </div>
+        </section>
+            <!-- 新闻公告部分结束 -->
+            <!-- 广告2部分开始 -->
+        <section class="zjl-event2">
+                <a href="" target="_blank" class="zjl-other-link">新人体验站，9.9元/首月</a>
+        </section>
+            <!-- 广告2部分结束 -->
+            <!-- 客服部分开始 -->
+        <section class="zjl-service">
+            <div class="container">
+                <ul>
+                    <li>
+                        <div class="icon ser-icon"></div>
+                        <h2>数据可靠性达</h2>
+                        <p>99.9999999%</p>
+                    </li>
+                    <li>
+                        <div class="icon ser-icon"></div>
+                        <h2>客户服务支持</h2>
+                        <p>7x24<span>小时</span></p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+            <!-- 客服部份结束 -->
         <!-- 主体功能部分结束 -->
-        
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+
     </main>
     <!-- 主体结束 -->
 
