lu_second commit

--- a/lu.html
+++ b/lu.html
@@ -33,7 +33,7 @@
 				<!-- 帮助文档开始 -->
 				<ul class="lu-crumb">
 					<li><a href="#">帮助文档 ></a></li>
-					<li><a href="#">关于我们 ></a></li>
+					<li><a href="lu-guanyu.html">关于我们 ></a></li>
 					<li><a href="#">公告</a></li>
 				</ul>
 				<!-- 帮助文档结束 -->
