--- a/lu-guanyu.html
+++ b/lu-guanyu.html
@@ -29,7 +29,7 @@
 					<img src="img/lianxi.jpg" alt="">
 					<span>联系我们</span>
 				</a>
-				<a  class="lu-col2" href="#">
+				<a  class="lu-col2" href="lu.html">
 					<img src="img/gonggao.jpg" alt="">
 					<span>公告</span>
 				</a>
