--- a/lu.html
+++ b/lu.html
@@ -14,7 +14,7 @@
 <!-- 	头部开始 -->	
 	<header>
 		<div class="lu-nav">
-			<a class="lu-logo-link" href="#">
+			<a class="lu-logo-link" href="zjl-index.html">
 				<img src="img/logo.png" alt="">
 			</a>
 			<a class="lu-gengduo">
