--- a/zjl-index.html
+++ b/zjl-index.html
@@ -37,18 +37,18 @@
         <!-- 轮播器开始 -->
         <div class="zjl-slide">
             <ul>
-                <li><a href="#"></li>
+                <li><a href="#"></a></li>
 
-                <li><a href="#"></li>
+                <li><a href="#"></a></li>
 
-                <li><a href="#"></li>
+                <li><a href="#"></a></li>
 
             </ul>
         </div>
         <!-- 轮播器结束 -->
         <!-- 导航栏开始 -->
         <section class="platform">
-            <a href="#" target="_blank">
+            <a href="#" >
                 <article>
                     <figure>
                         <figcaption>
@@ -59,7 +59,7 @@
                     </figure>
                 </article>
             </a>
-            <a href="#" target="_blank">
+            <a href="#" >
                 <article>
                     <figure>
                         <figcaption>
@@ -70,7 +70,7 @@
                     </figure>
                 </article>
             </a>
-            <a href="#" target="_blank">
+            <a href="#" >
                 <article>
                     <figure>
                         <figcaption>
@@ -81,7 +81,7 @@
                     </figure>
                 </article>
             </a>
-            <a href="#" target="_blank">
+            <a href="#" >
                 <article>
                     <figure>
                         <figcaption>
@@ -92,7 +92,7 @@
                     </figure>
                 </article>
             </a>
-            <a href="#" target="_blank">
+            <a href="#" >
                 <article>
                     <figure>
                         <figcaption>
@@ -119,7 +119,7 @@
                         <p>高性能、高可靠、安全稳定的弹性计算服务</p>
                     </figcaption>
                     <div class="detail">
-                        <a href="#" class="zjl-de-link" target="_blank">详情</a>
+                        <a href="#" class="zjl-de-link" >详情</a>
                     </div>
                 </article>
                 <article>
@@ -131,7 +131,7 @@
                         <p>兼容 MySQL、SQL Server、PostgreSQL 协议的关系型数据库服务</p>
                     </figcaption>
                     <div class="detail">
-                        <a href="#" class="zjl-de-link" target="_blank">详情</a>
+                        <a href="#" class="zjl-de-link" >详情</a>
                     </div>
                 </article>
                 <article>
@@ -143,7 +143,7 @@
                         <p>海量空间、安全、高可靠，支撑了国内最大网盘的云存储</p>
                     </figcaption>
                     <div class="detail">
-                        <a href="#" class="zjl-de-link" target="_blank">详情</a>
+                        <a href="#" class="zjl-de-link" >详情</a>
                     </div>
                 </article>
                 <article>
@@ -155,7 +155,7 @@
                         <p>轻松享受百度流量红利，企业快人一步的选择</p>
                     </figcaption>
                     <div class="detail">
-                        <a href="#" class="zjl-de-link" target="_blank">详情</a>
+                        <a href="#" class="zjl-de-link" >详情</a>
                     </div>
                 </article>
                 <article>
@@ -167,7 +167,7 @@
                         <p>百度自建高质量CDN节点，让您的网站/服务像百度搜索一样快</p>
                     </figcaption>
                     <div class="detail">
-                        <a href="#" class="zjl-de-link" target="_blank">详情</a>
+                        <a href="#" class="zjl-de-link" >详情</a>
                     </div>
                 </article>
                 <article>
@@ -179,7 +179,7 @@
                         <p>提供百余种后缀域名注册及免费智能解析服务</p>
                     </figcaption>
                     <div class="detail">
-                        <a href="#" class="zjl-de-link" target="_blank">详情</a>
+                        <a href="#" class="zjl-de-link" >详情</a>
                     </div>
                 </article>
             </div>
@@ -192,7 +192,7 @@
         <section class="zjl-module zjl-solution">
             <h2>解决方案</h2>
             <div class="zjl-group">
-                <a href="#" target="_blank">
+                <a href="#" >
                     <article>
                         <figure>
                             <figcaption>
@@ -203,7 +203,7 @@
                         </figure>
                     </article>
                 </a>
-                <a href="#" target="_blank">
+                <a href="#" >
                     <article>
                         <figure>
                             <figcaption>
@@ -214,7 +214,7 @@
                         </figure>
                     </article>
                 </a>
-                <a href="#" target="_blank">
+                <a href="#" >
                     <article>
                         <figure>
                             <figcaption>
@@ -225,7 +225,7 @@
                         </figure>
                     </article>
                 </a>
-                <a href="#" target="_blank">
+                <a href="#" >
                     <article>
                         <figure>
                             <figcaption>
@@ -236,7 +236,7 @@
                         </figure>
                     </article>
                 </a>
-                <a href="#" target="_blank">
+                <a href="#" >
                     <article>
                         <figure>
                             <figcaption>
@@ -247,7 +247,7 @@
                         </figure>
                     </article>
                 </a>
-                <a href="#" target="_blank">
+                <a href="#" >
                     <article>
                         <figure>
                             <figcaption>
@@ -267,7 +267,7 @@
             <!-- 结局方案部分结束 -->
             <!-- 云市场部分开始  -->
         <section class="zjl-module zjl-market">
-            <a href="#" target="_blank">
+            <a href="#" >
                 <h2>云市场</h2>
             </a>
             <div class="group clearfix">
@@ -320,7 +320,7 @@
             <!-- 云市场部分结束  -->
             <!-- 广告1部分开始  -->
         <section class="zjl-event1">
-            <a href="#" target="_blank">
+            <a href="#" >
                 <div class="group">
                     <h2>云虚拟主机BCH</h2>
                     <br /> 
@@ -343,7 +343,7 @@
             <!-- 新闻公告部分结束 -->
             <!-- 广告2部分开始 -->
         <section class="zjl-event2">
-                <a href="" target="_blank" class="zjl-other-link">新人体验站，9.9元/首月</a>
+                <a href=""  class="zjl-other-link">新人体验站，9.9元/首月</a>
         </section>
             <!-- 广告2部分结束 -->
             <!-- 客服部分开始 -->
