--- a/huang-index.html
+++ b/huang-index.html
@@ -7,6 +7,19 @@
 		<link rel="stylesheet" type="text/css" href="./css/huangbaidu.css"/>
 	</head>
 	<body>
+		<header>
+			<div class="huang-nav">
+				<a class="huang-logo-link" href="zjl-index.html">
+					<img src="img/logo.png" alt="">
+				</a>
+				<a class="huang-gengduo">
+					<img src="img/gengduo.png" alt="">
+				</a>
+				<a class="huang-geren">
+					<img src="img/geren.png" alt="">
+				</a>
+			</div>
+		</header>
 		<div class="huang-container">
 			<div class="huang-outer-1">
 				<div class="huang-title-1">
@@ -175,9 +188,16 @@
 				</div>
 			
 			</div>
-			
-			
-			
+	
 		</div>
+		<footer>
+		    <div class="huang-footer">
+		        <p>© 2017 Baidu 
+		            <a href="#">使用百度前必读</a> 
+		            &nbsp;&nbsp;&nbsp;&nbsp;京ICP证030173号&nbsp;&nbsp;&nbsp;&nbsp;
+		            
+		        </p>
+		    </div>
+		</footer>
 	</body>
 </html>
