--- a/huang-index.html
+++ b/huang-index.html
@@ -12,10 +12,10 @@
 				<a class="huang-logo-link" href="zjl-index.html">
 					<img src="img/logo.png" alt="">
 				</a>
-				<a class="huang-gengduo">
+				<a class="huang-gengduo" href="">
 					<img src="img/gengduo.png" alt="">
 				</a>
-				<a class="huang-geren">
+				<a class="huang-geren" href="zjl-index.html">
 					<img src="img/geren.png" alt="">
 				</a>
 			</div>
