--- a/lin-baidudenglu.html
+++ b/lin-baidudenglu.html
@@ -11,12 +11,12 @@
 		<header>
 			<div class="l_header_div1">
 				<div class="l_header_div2">
-					<a href="#">
+					<a href="zjl-index.html">
 						<img width="122" height="26" src="img/	logo_white_v2.png" alt="百度智能云">
 					</a>
 				</div>
 				<div class="l_header_div3">
-					<a href="#">返回首页</a>&nbsp;&nbsp;
+					<a href="zjl-index.html">返回首页</a>&nbsp;&nbsp;
 					<a href="#">English</a>
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 								</tr>
 								<div class="l_texting">
 									<a href="#">忘记密码</a>
-									<a href="#">立即注册</a>
+									<a href="lin-register2.html">立即注册</a>
 								</div>
 							</div>
 							<div class="l_notice">
