--- a/lin-register2.html
+++ b/lin-register2.html
@@ -11,12 +11,12 @@
 		<header>
 			<div class="l_header_div1">
 				<div class="l_header_div2">
-					<a href="#">
+					<a href="zjl-index.html">
 						<img width="122" height="26" src="img/	logo_white_v2.png" alt="百度智能云">
 					</a>
 				</div>
 				<div class="l_header_div3">
-					<a href="#">返回首页</a>
+					<a href="zjl-index.html">返回首页</a>
 				</div>
 			</div>
 		</header>
