--- a/ljj-index.html
+++ b/ljj-index.html
@@ -22,10 +22,10 @@
                 </a>
             </div>
             <div class="right">
-                <a href="#" class="right">
+                <a href="" class="right">
                     <img src="img/logo-3.png" alt="个人用户" width="20px" height="20px" class="zjl-hd-img2" />
                 </a>
-                <a href="#" class="right">
+                <a href="lin-baidudenglu.html" class="right">
                     <img src="img/logo-2.png" alt="导航栏" width="20px" height="20px" class="zjl-hd-img2" />
                 </a>
             </div>
