--- a/zjl-index.html
+++ b/zjl-index.html
@@ -21,10 +21,10 @@
                 </a>
             </div>
             <div class="right">
-                <a href="#" class="right">
+                <a href="" class="right">
                     <img src="img/gengduo.png" alt="个人用户" width="20px" height="20px" class="zjl-hd-img2" />
                 </a>
-                <a href="#" class="right">
+                <a href="lin-baidudenglu.html" class="right">
                     <img src="img/geren.png" alt="导航栏" width="20px" height="20px" class="zjl-hd-img2" />
                 </a>
             </div>
@@ -184,7 +184,7 @@
                 </article>
             </div>
             <div class="more">
-                <a href="#">查看更多产品</a>
+                <a href="ljj-index.html">查看更多产品</a>
             </div>
         </section>
             <!-- 产品部分结束 -->
@@ -260,7 +260,7 @@
                 </a>
             </div>
             <div class="more">
-                <a href="#">查看更多产品</a>
+                <a href="huang-index.html">查看更多产品</a>
             </div>
 
         </section>
